Tigger_Project_in_eclipse/TigerParser.java
// $ANTLR 3.4 C:\\Users\\e49al\\Tiger.g 2013-06-03 14:46:38

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class TigerParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ARRAYCREATION", "ARRAYINDEX", "ARRAYTYPE", "ASSIGN", "BACKSLASH", "BREAK", "COLON", "COMMA", "COMMENT", "DECS", "DIGIT", "DIV", "DO", "DOT", "ELSE", "END", "EQUAL", "ESCAPEDSEQ", "EXPSEQ", "FOR", "FORMATCHAR", "FUN", "FUNCTIONCALL", "GE", "GT", "ID", "IF", "IFTHEN", "IFTHENELSE", "IN", "INT", "LE", "LEFTBRACE", "LEFTBRACKET", "LEFTPARENTHESIS", "LET", "LT", "LVALUE", "MINUS", "NE", "NIL", "NILROOT", "OF", "OR", "PLUS", "PRINTABLECHAR", "QUOTE", "RECORDCREATION", "RIGHTBRACE", "RIGHTBRACKET", "RIGHTPARENTHESIS", "SEMICOLON", "SEQ", "SEQUENCING", "STRING", "THEN", "TIMES", "TO", "TYFIELDS", "TYPE", "VAR", "WHILE"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int ARRAY=5;
    public static final int ARRAYCREATION=6;
    public static final int ARRAYINDEX=7;
    public static final int ARRAYTYPE=8;
    public static final int ASSIGN=9;
    public static final int BACKSLASH=10;
    public static final int BREAK=11;
    public static final int COLON=12;
    public static final int COMMA=13;
    public static final int COMMENT=14;
    public static final int DECS=15;
    public static final int DIGIT=16;
    public static final int DIV=17;
    public static final int DO=18;
    public static final int DOT=19;
    public static final int ELSE=20;
    public static final int END=21;
    public static final int EQUAL=22;
    public static final int ESCAPEDSEQ=23;
    public static final int EXPSEQ=24;
    public static final int FOR=25;
    public static final int FORMATCHAR=26;
    public static final int FUN=27;
    public static final int FUNCTIONCALL=28;
    public static final int GE=29;
    public static final int GT=30;
    public static final int ID=31;
    public static final int IF=32;
    public static final int IFTHEN=33;
    public static final int IFTHENELSE=34;
    public static final int IN=35;
    public static final int INT=36;
    public static final int LE=37;
    public static final int LEFTBRACE=38;
    public static final int LEFTBRACKET=39;
    public static final int LEFTPARENTHESIS=40;
    public static final int LET=41;
    public static final int LT=42;
    public static final int LVALUE=43;
    public static final int MINUS=44;
    public static final int NE=45;
    public static final int NIL=46;
    public static final int NILROOT=47;
    public static final int OF=48;
    public static final int OR=49;
    public static final int PLUS=50;
    public static final int PRINTABLECHAR=51;
    public static final int QUOTE=52;
    public static final int RECORDCREATION=53;
    public static final int RIGHTBRACE=54;
    public static final int RIGHTBRACKET=55;
    public static final int RIGHTPARENTHESIS=56;
    public static final int SEMICOLON=57;
    public static final int SEQ=58;
    public static final int SEQUENCING=59;
    public static final int STRING=60;
    public static final int THEN=61;
    public static final int TIMES=62;
    public static final int TO=63;
    public static final int TYFIELDS=64;
    public static final int TYPE=65;
    public static final int VAR=66;
    public static final int WHILE=67;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TigerParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TigerParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return TigerParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\e49al\\Tiger.g"; }


    	Stack paraphrases = new Stack();
    	public String getErrorMessage(RecognitionException e,
    			String[] tokenNames)
    	{
    		String msg = super.getErrorMessage(e, tokenNames);
    		if ( paraphrases.size()>0 ) {
    			String paraphrase = (String)paraphrases.peek();
    			msg = msg+" "+paraphrase;
    		}
    		return msg;
    	}


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // C:\\Users\\e49al\\Tiger.g:99:1: prog : exp -> exp ;
    public final TigerParser.prog_return prog() throws RecognitionException {
        TigerParser.prog_return retval = new TigerParser.prog_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        TigerParser.exp_return exp1 =null;


        RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");
        paraphrases.push("in prog");
        try {
            // C:\\Users\\e49al\\Tiger.g:102:3: ( exp -> exp )
            // C:\\Users\\e49al\\Tiger.g:102:3: exp
            {
            pushFollow(FOLLOW_exp_in_prog374);
            exp1=exp();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_exp.add(exp1.getTree());

            // AST REWRITE
            // elements: exp
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 102:7: -> exp
            {
                adaptor.addChild(root_0, stream_exp.nextTree());

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {paraphrases.pop();}
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class decs_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "decs"
    // C:\\Users\\e49al\\Tiger.g:109:1: decs : ( dec )* -> ^( DECS ( dec )* ) ;
    public final TigerParser.decs_return decs() throws RecognitionException {
        TigerParser.decs_return retval = new TigerParser.decs_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        TigerParser.dec_return dec2 =null;


        RewriteRuleSubtreeStream stream_dec=new RewriteRuleSubtreeStream(adaptor,"rule dec");
        paraphrases.push("in decs");
        try {
            // C:\\Users\\e49al\\Tiger.g:112:3: ( ( dec )* -> ^( DECS ( dec )* ) )
            // C:\\Users\\e49al\\Tiger.g:112:3: ( dec )*
            {
            // C:\\Users\\e49al\\Tiger.g:112:3: ( dec )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUN||(LA1_0 >= TYPE && LA1_0 <= VAR)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\e49al\\Tiger.g:112:4: dec
            	    {
            	    pushFollow(FOLLOW_dec_in_decs403);
            	    dec2=dec();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_dec.add(dec2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: dec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 112:9: -> ^( DECS ( dec )* )
            {
                // C:\\Users\\e49al\\Tiger.g:112:12: ^( DECS ( dec )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(DECS, "DECS")
                , root_1);

                // C:\\Users\\e49al\\Tiger.g:112:19: ( dec )*
                while ( stream_dec.hasNext() ) {
                    adaptor.addChild(root_1, stream_dec.nextTree());

                }
                stream_dec.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {paraphrases.pop();}
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "decs"


    public static class dec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "dec"
    // C:\\Users\\e49al\\Tiger.g:113:1: dec : ( tydec -> tydec | vardec -> vardec | fundec -> fundec );
    public final TigerParser.dec_return dec() throws RecognitionException {
        TigerParser.dec_return retval = new TigerParser.dec_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        TigerParser.tydec_return tydec3 =null;

        TigerParser.vardec_return vardec4 =null;

        TigerParser.fundec_return fundec5 =null;


        RewriteRuleSubtreeStream stream_fundec=new RewriteRuleSubtreeStream(adaptor,"rule fundec");
        RewriteRuleSubtreeStream stream_tydec=new RewriteRuleSubtreeStream(adaptor,"rule tydec");
        RewriteRuleSubtreeStream stream_vardec=new RewriteRuleSubtreeStream(adaptor,"rule vardec");
        paraphrases.push("in dec");
        try {
            // C:\\Users\\e49al\\Tiger.g:116:3: ( tydec -> tydec | vardec -> vardec | fundec -> fundec )
            int alt2=3;
            switch ( input.LA(1) ) {
            case TYPE:
                {
                alt2=1;
                }
                break;
            case VAR:
                {
                alt2=2;
                }
                break;
            case FUN:
                {
                alt2=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\e49al\\Tiger.g:116:3: tydec
                    {
                    pushFollow(FOLLOW_tydec_in_dec431);
                    tydec3=tydec();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_tydec.add(tydec3.getTree());

                    // AST REWRITE
                    // elements: tydec
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 116:9: -> tydec
                    {
                        adaptor.addChild(root_0, stream_tydec.nextTree());

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // C:\\Users\\e49al\\Tiger.g:117:3: vardec
                    {
                    pushFollow(FOLLOW_vardec_in_dec439);
                    vardec4=vardec();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_vardec.add(vardec4.getTree());

                    // AST REWRITE
                    // elements: vardec
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 117:10: -> vardec
                    {
                        adaptor.addChild(root_0, stream_vardec.nextTree());

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 3 :
                    // C:\\Users\\e49al\\Tiger.g:118:3: fundec
                    {
                    pushFollow(FOLLOW_fundec_in_dec447);
                    fundec5=fundec();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_fundec.add(fundec5.getTree());

                    // AST REWRITE
                    // elements: fundec
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 118:10: -> fundec
                    {
                        adaptor.addChild(root_0, stream_fundec.nextTree());

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {paraphrases.pop();}
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "dec"


    public static class tydec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "tydec"
    // C:\\Users\\e49al\\Tiger.g:120:1: tydec : TYPE ID EQUAL ty -> ^( TYPE ID ty ) ;
    public final TigerParser.tydec_return tydec() throws RecognitionException {
        TigerParser.tydec_return retval = new TigerParser.tydec_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token TYPE6=null;
        Token ID7=null;
        Token EQUAL8=null;
        TigerParser.ty_return ty9 =null;


        Object TYPE6_tree=null;
        Object ID7_tree=null;
        Object EQUAL8_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_EQUAL=new RewriteRuleTokenStream(adaptor,"token EQUAL");
        RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
        RewriteRuleSubtreeStream stream_ty=new RewriteRuleSubtreeStream(adaptor,"rule ty");
        paraphrases.push("in type decarations");
        try {
            // C:\\Users\\e49al\\Tiger.g:123:3: ( TYPE ID EQUAL ty -> ^( TYPE ID ty ) )
            // C:\\Users\\e49al\\Tiger.g:123:3: TYPE ID EQUAL ty
            {
            TYPE6=(Token)match(input,TYPE,FOLLOW_TYPE_in_tydec470); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_TYPE.add(TYPE6);


            ID7=(Token)match(input,ID,FOLLOW_ID_in_tydec472); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID7);


            EQUAL8=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_tydec474); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EQUAL.add(EQUAL8);


            pushFollow(FOLLOW_ty_in_tydec476);
            ty9=ty();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_ty.add(ty9.getTree());

            // AST REWRITE
            // elements: ty, ID, TYPE
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 123:20: -> ^( TYPE ID ty )
            {
                // C:\\Users\\e49al\\Tiger.g:123:23: ^( TYPE ID ty )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_TYPE.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, stream_ty.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {paraphrases.pop();}
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "tydec"


    public static class ty_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ty"
    // C:\\Users\\e49al\\Tiger.g:124:1: ty : ( ID -> ID | LEFTBRACE ( tyfields ) RIGHTBRACE -> tyfields | LEFTBRACE RIGHTBRACE -> NILROOT | ARRAY OF ID -> ^( ARRAYTYPE ID ) );
    public final TigerParser.ty_return ty() throws RecognitionException {
        TigerParser.ty_return retval = new TigerParser.ty_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID10=null;
        Token LEFTBRACE11=null;
        Token RIGHTBRACE13=null;
        Token LEFTBRACE14=null;
        Token RIGHTBRACE15=null;
        Token ARRAY16=null;
        Token OF17=null;
        Token ID18=null;
        TigerParser.tyfields_return tyfields12 =null;


        Object ID10_tree=null;
        Object LEFTBRACE11_tree=null;
        Object RIGHTBRACE13_tree=null;
        Object LEFTBRACE14_tree=null;
        Object RIGHTBRACE15_tree=null;
        Object ARRAY16_tree=null;
        Object OF17_tree=null;
        Object ID18_tree=null;
        RewriteRuleTokenStream stream_RIGHTBRACE=new RewriteRuleTokenStream(adaptor,"token RIGHTBRACE");
        RewriteRuleTokenStream stream_LEFTBRACE=new RewriteRuleTokenStream(adaptor,"token LEFTBRACE");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_OF=new RewriteRuleTokenStream(adaptor,"token OF");
        RewriteRuleTokenStream stream_ARRAY=new RewriteRuleTokenStream(adaptor,"token ARRAY");
        RewriteRuleSubtreeStream stream_tyfields=new RewriteRuleSubtreeStream(adaptor,"rule tyfields");
        paraphrases.push("in ty");
        try {
            // C:\\Users\\e49al\\Tiger.g:127:3: ( ID -> ID | LEFTBRACE ( tyfields ) RIGHTBRACE -> tyfields | LEFTBRACE RIGHTBRACE -> NILROOT | ARRAY OF ID -> ^( ARRAYTYPE ID ) )
            int alt3=4;
            switch ( input.LA(1) ) {
            case ID:
                {
                alt3=1;
                }
                break;
            case LEFTBRACE:
                {
                int LA3_2 = input.LA(2);

                if ( (LA3_2==RIGHTBRACE) ) {
                    alt3=3;
                }
                else if ( (LA3_2==ID) ) {
                    alt3=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    throw nvae;

                }
                }
                break;
            case ARRAY:
                {
                alt3=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // C:\\Users\\e49al\\Tiger.g:127:3: ID
                    {
                    ID10=(Token)match(input,ID,FOLLOW_ID_in_ty504); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID10);


                    // AST REWRITE
                    // elements: ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 127:6: -> ID
                    {
                        adaptor.addChild(root_0, 
                        stream_ID.nextNode()
                        );

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // C:\\Users\\e49al\\Tiger.g:128:3: LEFTBRACE ( tyfields ) RIGHTBRACE
                    {
                    LEFTBRACE11=(Token)match(input,LEFTBRACE,FOLLOW_LEFTBRACE_in_ty512); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_LEFTBRACE.add(LEFTBRACE11);


                    // C:\\Users\\e49al\\Tiger.g:128:13: ( tyfields )
                    // C:\\Users\\e49al\\Tiger.g:128:14: tyfields
                    {
                    pushFollow(FOLLOW_tyfields_in_ty515);
                    tyfields12=tyfields();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_tyfields.add(tyfields12.getTree());

                    }


                    RIGHTBRACE13=(Token)match(input,RIGHTBRACE,FOLLOW_RIGHTBRACE_in_ty518); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_RIGHTBRACE.add(RIGHTBRACE13);


                    // AST REWRITE
                    // elements: tyfields
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 128:35: -> tyfields
                    {
                        adaptor.addChild(root_0, stream_tyfields.nextTree());

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 3 :
                    // C:\\Users\\e49al\\Tiger.g:129:4: LEFTBRACE RIGHTBRACE
                    {
                    LEFTBRACE14=(Token)match(input,LEFTBRACE,FOLLOW_LEFTBRACE_in_ty527); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_LEFTBRACE.add(LEFTBRACE14);


                    RIGHTBRACE15=(Token)match(input,RIGHTBRACE,FOLLOW_RIGHTBRACE_in_ty529); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_RIGHTBRACE.add(RIGHTBRACE15);

